--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Vagner-Filho/nodeRESTApi#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "uuid": "^8.3.2"
   }
 }
